fixed user markers, @mitsuhiko: The user map seems to be buggy – no user markers are visible...

--- a/inyoka/static/style/portal.css
+++ b/inyoka/static/style/portal.css
@@ -13,6 +13,12 @@ h3 {
     color: #444;
 }
 
+h4 {
+  font-size: 1.3em;
+  color: #444;
+  border-bottom: 1px solid #ded2bb;
+}
+
 form.usercp_form ul {
   list-style: none;
 }
